[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Miku AuahDark", email = "lumi.hotaru@gmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
]
description = "Flexible Layouting Library"
name = "nlay"
readme = "README.md"
requires-python = ">=3.10"
version = "1.4.0"

[project.urls]
"Bug Tracker" = "https://github.com/MikuAuahDark/nlay-py/issues"
"Homepage" = "https://github.com/MikuAuahDark/nlay-py"
